Updated to agda-2.6.2 and agda-stdlib-0.17
Changes in the type and termination checker of Agda left these TODOs:

- get rid of introduced {-# TERMINATING #-} pragmas
- get rid of introduced postulate (with-abstraction failing)

--- a/agda/README
+++ b/agda/README
@@ -2,8 +2,13 @@ Agda-based solution to the POPLMark2 reloaded challenge.
 
 To compile this solution you'll need:
 
-* Agda version 2.5.3
-* Agda's standard library version 0.15
+* latest:
+  - Agda version 2.6.2
+  - Agda's standard library version 0.17
+
+* tag agda-2.5.3:
+  - Agda version 2.5.3
+  - Agda's standard library version 0.15
 
 To check this solution you can:
 
